# demo-web-test-robot-selenium

./: README.md  pyproject.toml  requirements.txt
demoapp/: server.py
demoapp/html/: error.html  index.html  style.css  welcome.html
pages/: base_page.robot  error_page.robot  login_page.robot  profile_page.robot  welcome_page.robot
tests/: error_page_tests.robot  gherkin_login_tests.robot  invalid_login_tests.robot  login_page_base_tests.robot  valid_login_tests.robot  welcome_page_tests.robot
