[tool.poetry]
name = "webdemo"
version = "0.1.0"
description = ""
authors = ["remak <dr.remak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
robotframework = "4.1.2"
robotframework-seleniumlibrary = "5.1.3"
invoke = "1.6.0"
rellu = "0.7"
docutils = "0.18"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
